fix assertion and use a better name